Fixed reviews page datatables issue and a slight spacing adjustment to the language icons

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -161,6 +161,9 @@ select {
         color: #000;
     }
 }
+.title-wrapper img.lang_logo {
+    margin: -.1em .25em .1em 0;
+}
 
 /* ===== Button Styles ===== */
 button, .btn {
